# serde_ccl

./: CHANGELOG.md  Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  position.rs  ser.rs
src/de/: deserializer.rs  mod.rs  read.rs
src/parser/: mod.rs  read_parser.rs  slice_parser.rs  str_parser.rs
tests/: t0_data_types.rs  t1_enum_from_str.rs  tests.rs
