[package]
name = "serde_ccl"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = { version = "2.3", default-features = false }
serde = { version = "1.0", default-features = false }

[features]
default = ["std"]
std = ["memchr/std", "serde/std"]

[lints.rust]
private-interfaces = "allow"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
missing-errors-doc = "allow"
