[package]
name = "serde_ccl"
version = "0.1.1"
edition = "2021"
description = "Serde-based deserializer for CCL Documents"
authors = ["Tudor-Cristian Lechințan <lechintantudor02@gmail.com>"]
repository = "https://github.com/LechintanTudor/serde_ccl"
keywords = ["ccl", "config", "serde"]
categories = ["config", "no-std", "parser-implementations"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
memchr = { version = "2.3", default-features = false }
serde = { version = "1.0", default-features = false }

[features]
default = ["std"]
std = ["memchr/std", "serde/std"]

[lints.rust]
missing-docs = "warn"
private-interfaces = "allow"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
missing-errors-doc = "allow"
